--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
@@ -186,7 +186,7 @@
                     }
                     else
                     {
-                        <MudText Typo="Typo.button" Color="Color.Warning">@(context.SingleOccurrence ?? "-")</MudText>
+                        <MudText Typo="Typo.button" Color="Color.Warning">@context.SingleOccurrence</MudText>
                     }
                 </MudTd>
                 <MudTd>
@@ -250,7 +250,6 @@
 
                 <MudSpacer />
 
-                <MudText Typo="Typo.button">Next REL</MudText>
                 <MudChip Size="Size.Small" Variant="Variant.Text" DisableRipple="true" Label="true">
                     Next REL @activeReliabilityCheck.ToString()
                 </MudChip>
