--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -556,6 +556,14 @@ th {
 }
 
 /* pages & containers */
+.layout-appbar {
+    border-bottom: 1px solid var(--mud-palette-primary);
+}
+
+.layout-drawer {
+    border-right: 1px solid var(--mud-palette-primary);
+}
+
 .empty-page-container {
     display: flex;
     flex-direction: column;
