--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -573,6 +573,10 @@ th {
     width: 100%;
 }
 
+.trait-assignment-menu-bar {
+    width: 100%;
+}
+
 /* dialogs */
 .additional-dialog-controls {
     margin-right: 15px;
